--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/humpback/humpback-web#readme",
   "dependencies": {
     "body-parser": "^1.16.0",
+    "compression": "^1.6.2",
     "console-stamp": "^0.2.5",
     "cookie-parser": "^1.4.3",
     "errorhandler": "^1.5.0",
