Upgrade to Angular 4.0.1

--- a/package.json
+++ b/package.json
@@ -31,18 +31,19 @@
     "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "@angular/common": "^2.4.10",
-    "@angular/compiler": "^2.4.10",
-    "@angular/core": "^2.4.10",
-    "@angular/forms": "^2.4.10",
-    "@angular/http": "^2.4.10",
-    "@angular/platform-browser": "^2.4.10",
-    "@angular/platform-browser-dynamic": "^2.4.10",
-    "@angular/router": "^3.4.10",
+    "@angular/animations": "^4.0.1",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/forms": "^4.0.1",
+    "@angular/http": "^4.0.1",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/router": "^4.0.1",
     "@angularclass/resolve-angular-routes": "^1.0.9",
-    "@types/core-js": "^0.9.37",
-    "@types/jasmine": "^2.5.46",
-    "@types/node": "^7.0.8",
+    "@types/core-js": "^0.9.40",
+    "@types/jasmine": "^2.5.47",
+    "@types/node": "^7.0.12",
     "@types/request": "0.0.39",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.2",
@@ -56,7 +57,7 @@
     "gulp-clean-css": "^2.4.0",
     "gulp-develop-server": "^0.5.2",
     "gulp-if": "^2.0.2",
-    "gulp-uglify": "^2.1.0",
+    "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.1.2",
     "gulp-util": "^3.0.8",
     "html-loader": "^0.4.5",
@@ -70,8 +71,8 @@
     "run-sequence": "^1.2.2",
     "rxjs": "^5.2.0",
     "style-loader": "^0.13.2",
-    "typescript": "^2.2.1",
-    "webpack": "^2.2.1",
+    "typescript": "^2.2.2",
+    "webpack": "^2.3.2",
     "webpack-merge": "^2.6.1",
     "zone.js": "^0.7.8"
   }
