--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/humpback/humpback-web#readme",
     "dependencies": {
+        "@types/file-saver": "^1.3.0",
         "@types/js-yaml": "^3.11.1",
         "body-parser": "^1.17.1",
         "brace": "^0.11.1",
@@ -28,6 +29,7 @@
         "errorhandler": "^1.5.0",
         "express": "^4.15.2",
         "express-session": "^1.15.1",
+        "file-saver": "^1.3.8",
         "js-yaml": "^3.11.0",
         "nedb": "^1.8.0",
         "nedb-session-store": "^1.1.1",
