--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "@types/file-saver": "^1.3.0",
         "@types/js-yaml": "^3.11.1",
+        "@types/request": "^2.47.0",
         "body-parser": "^1.17.1",
         "brace": "^0.11.1",
         "compression": "^1.6.2",
@@ -49,7 +50,6 @@
         "@types/core-js": "^0.9.40",
         "@types/jasmine": "^2.5.47",
         "@types/node": "^7.0.12",
-        "@types/request": "0.0.39",
         "angular2-template-loader": "^0.6.2",
         "awesome-typescript-loader": "^3.1.2",
         "copy-webpack-plugin": "^4.0.1",
