--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "humpback management website",
   "main": "src/server/index.js",
   "scripts": {
-    "start": "gulp dev",
+    "start": "npm run dev",
+    "dev": "gulp dev",
     "build": "gulp release"
   },
   "repository": {
@@ -22,65 +23,64 @@
     "@types/file-saver": "^1.3.0",
     "@types/js-yaml": "^3.11.1",
     "@types/request": "^2.47.0",
-    "body-parser": "^1.17.1",
+    "body-parser": "^1.18.3",
     "brace": "^0.11.1",
-    "compression": "^1.6.2",
-    "console-stamp": "^0.2.5",
+    "compression": "^1.7.3",
+    "console-stamp": "^0.2.7",
     "cookie-parser": "^1.4.3",
     "errorhandler": "^1.5.0",
-    "express": "^4.15.2",
+    "express": "^4.16.4",
     "express-session": "^1.15.1",
     "file-saver": "^1.3.8",
-    "js-yaml": "^3.11.0",
+    "js-yaml": "^3.12.0",
     "nedb": "^1.8.0",
     "nedb-session-store": "^1.1.1",
-    "ngx-bootstrap": "^2.0.4",
-    "uuid": "^3.0.1"
+    "ngx-bootstrap": "^3.1.3",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@angular/animations": "^4.0.1",
-    "@angular/common": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/core": "^4.0.1",
-    "@angular/forms": "^4.0.1",
-    "@angular/http": "^4.0.1",
-    "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/router": "^4.0.1",
+    "@angular/animations": "^7.1.3",
+    "@angular/common": "^7.1.3",
+    "@angular/compiler": "^7.1.3",
+    "@angular/core": "^7.1.3",
+    "@angular/forms": "^7.1.3",
+    "@angular/http": "^7.1.3",
+    "@angular/platform-browser": "^7.1.3",
+    "@angular/platform-browser-dynamic": "^7.1.3",
+    "@angular/router": "^7.1.3",
     "@angularclass/resolve-angular-routes": "^1.0.9",
     "@types/core-js": "^0.9.40",
     "@types/jasmine": "^2.5.47",
     "@types/node": "^7.0.12",
     "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.1.2",
-    "copy-webpack-plugin": "^4.0.1",
-    "core-js": "^2.4.1",
-    "css-loader": "^0.26.4",
-    "del": "^2.2.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.9.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "core-js": "^2.6.0",
+    "css-loader": "^2.0.1",
+    "del": "^3.0.0",
+    "file-loader": "^2.0.0",
     "gulp": "^4.0.0",
-    "gulp-clean-css": "^2.4.0",
+    "gulp-clean-css": "^4.0.0",
     "gulp-develop-server": "^0.5.2",
     "gulp-if": "^2.0.2",
-    "gulp-uglify": "^2.1.2",
-    "gulp-useref": "^3.1.2",
+    "gulp-uglify": "^3.0.1",
+    "gulp-useref": "^3.1.6",
     "gulp-util": "^3.0.8",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "^2.5.2",
     "light-reload": "^0.2.0",
-    "ng2-select2": "^1.0.0-beta.10",
-    "node-notifier": "^4.6.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "ng2-select2": "^1.0.0-beta.16",
+    "node-notifier": "^5.3.0",
     "progress-bar-webpack-plugin": "^1.9.3",
-    "raw-loader": "^0.5.1",
+    "raw-loader": "^1.0.0",
     "reflect-metadata": "^0.1.10",
-    "run-sequence": "^1.2.2",
-    "rxjs": "^5.2.0",
-    "style-loader": "^0.13.2",
-    "typescript": "^2.2.2",
-    "webpack": "^2.3.2",
-    "webpack-merge": "^2.6.1",
-    "zone.js": "^0.7.8"
+    "rxjs": "^6.3.3",
+    "style-loader": "^0.23.1",
+    "ts-loader": "^5.3.1",
+    "typescript": "^3.0.2",
+    "webpack": "^4.27.1",
+    "webpack-merge": "^4.1.5",
+    "zone.js": "^0.8.26"
   }
 }
