--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "express-session": "^1.15.1",
         "file-saver": "^1.3.8",
         "js-yaml": "^3.13.1",
+        "natives": "^1.1.6",
         "nedb": "^1.8.0",
         "nedb-session-store": "^1.1.1",
         "ngx-bootstrap": "^2.0.4",
