--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "cookie-parser": "^1.4.3",
         "errorhandler": "^1.5.0",
         "express": "^4.15.2",
+        "express-http-proxy": "^1.6.2",
         "express-session": "^1.15.1",
         "file-saver": "^1.3.8",
         "js-yaml": "^3.13.1",
